# xaskpass

./: .gitignore  Cargo.toml  LICENCE  README.md  RELEASE-CHECKLIST.md  build.rs  xaskpass.default.toml  xaskpass.man  xaskpass.man.in
aur/: PKGBUILD
src/: backbuffer.rs  config.rs  errors.rs  event.rs  main.rs  secret.rs
src/dialog/: indicator.rs  layout.rs  mod.rs  pango_sys_fixes.h
src/errors/: fallback.rs  mod.rs  xcb_errors.rs
src/errors/xcb_errors/: ffi.h  ffi.rs  mod.rs
src/keyboard/: ffi.h  ffi.rs  ffi_keysyms.h  ffi_keysyms.rs  ffi_names.h  ffi_names.rs  mod.rs  x11_ffi.rs
