[package]
name = "xaskpass"
description = "A lightweight passphrase dialog"
repository = "https://github.com/user827/xaskpass"
license = "Apache-2.0"
keywords = ["askpass", "password", "x11", "xcb"]
version = "2.5.1"
edition = "2021"
authors = ["user827"]
readme = "README.md"
exclude = [
  "/.gitignore",
  "/RELEASE-CHECKLIST.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
thiserror = { version = "1.0" }
tokio = { version = "1.10", features = [ "net", "rt", "macros", "signal", "time" ] }
x11rb = { version = "0.10", features = [ "allow-unsafe-code", "present", "xkb", "resource_manager", "cursor", "render", "xfixes", "randr" ] }
pangocairo = "0.15"
pangocairo-sys = "0.15"
pango = { version = "0.15" }
pango-sys = "0.15"
yeslogic-fontconfig-sys = "3.0"
libc = "0.2"
clap = { version = "3", features = [ "derive", "cargo" ] }
log = "0.4"
stderrlog = { version = "0.5" }
cairo-rs = { version = "0.15", features = ["xcb"] }
cairo-sys-rs = { version = "0.15" }
gethostname = "0.2"
secstr = "0.5"
zeroize = "1.4"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
xdg = "2.2"
rand = "0.8"

[build-dependencies]
pkg-config = "0.3"
bindgen = "0.60"
image = "0.24"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
